src/test/resources/json/invalid_inputs/invalid_empty_map.json.except
Robot can't stand out of the room; now it's on 1, 1.